# keyphrase

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
benches/: bench.rs
src/: crypto.rs  error.rs  keyphrase.rs  keyphrase_type.rs  language.rs  lib.rs  main.rs  mnemonic.rs  mnemonic_type.rs  seed.rs  util.rs
tests/: generate.rs  validate.rs
