[package]
name = "keyphrase"
version = "0.0.2"
authors = [ "Gabriel Cardona <https://www.earth.engineering>" ]
license = "MIT/Apache-2.0"
homepage = "https://www.earth.engineering"
repository = "https://github.com/EarthEngineering/keyphrase"
readme = "README.md"
description = "KeyPhrase generation for the EARTH Network"
documentation = "https://docs.rs/keyphrase"
keywords = ["earth", "keyphrase", "mnemonic"]
edition = "2018"

[lib]
name = "keyphrase"
path = "src/lib.rs"

[features]
chinese-simplified = []
chinese-traditional = []
# Note: English is the standard for bip39 so always included
french = []
italian = []
japanese = []
korean = []
spanish = []

default = ["chinese-simplified", "chinese-traditional", "french", "italian", "japanese", "korean", "spanish"]

[dependencies]
failure = "0.1.3"
# Note: hashbrown is going to be merged into Rust std
hashbrown = "0.1.7"
sha2 = "0.8.0"
hmac = "0.7.0"
pbkdf2 = { version = "0.3.0", features=["parallel"], default-features = false }
rand = "0.6.1"
once_cell = { version = "0.1.6", features = [ "parking_lot" ] }
better-panic = "0.2.0"

